# expbox

./: CHANGELOG.md  README.md  pyproject.toml
src/expbox/: __init__.py  api.py  cli.py  core.py  exceptions.py  ids.py  io.py  logger.py
src/expbox/tools/: __init__.py  export.py
tests/: test_api_basic.py  test_cli.py  test_config.py  test_git_stamp.py  test_ids.py  test_logger.py
